fixed validators table height, fixed validators map controls overlaping toolbar

--- a/Source/src/app/shared/components/toolbar/toolbar/toolbar.component.scss
+++ b/Source/src/app/shared/components/toolbar/toolbar/toolbar.component.scss
@@ -1,3 +1,3 @@
 .toolbar {
-  z-index: 1000;
+  z-index: 9999;
 }
